# DevOps-Agent

./: Dockerfile  README.md  config.py  package-lock.json  start-backend.bat  start-frontend.bat
.github/workflows/: ci-python-fastapi.yml  ci.yml  cicd.yml
backend/: .env  devops_agent.db  env.example  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py
backend/app/api/: routes.py
backend/app/api/v1/: analysis.py  approvals.py  auth.py  build_monitor.py  builds.py  github.py  hook.py  infrastructure.py  metrics.py  pipelines.py  pipelines_fixed.py  security.py  sql.py  webhook.py
backend/app/database/: database.py  model.py
backend/app/services/: ai_analyzer.py  pipeline_monitor.py
docs/: deployment-flow.md  enhancements.md  setup.md
frontend/: .env  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  theme.ts
frontend/src/components/: AppHeader.tsx  BuildMonitor.tsx
frontend/src/pages/: App.tsx  ApprovalsPage.tsx  DashboardPage.tsx  DeployConfigPage.tsx  DeploymentDashboardPage.tsx  DoraDashboardPage.tsx  FailedPipelinesPage.tsx  InfrastructureSelectionPage.tsx  LoginPage.tsx  PipelinePreviewPage.tsx  ProvisioningPage.tsx  RepoSelectionPage.tsx  SecurityResultsPage.tsx  TechDetectionPage.tsx
frontend/src/services/: approvalService.ts  authService.ts  buildMonitorService.ts  httpClient.ts  pipelineService.ts  repoService.ts  techService.ts
frontend/src/styles/: AppHeader.css  DashboardPages.css  DeployConfigPage.css  LoginPage.css  ProvisioningPage.css  (+2 more)
templates/github-actions/: ci-python-fastapi.yml
templates/terraform/: main.tf
(+3 files in other folders)
